code refactoring (BEM)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "debug.disassemblyView.showSourceCode": true
+  "debug.disassemblyView.showSourceCode": true,
+  "liveServer.settings.port": 5501
 }
